<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share_location"
        android:title="@string/menu_share_location"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_new_trip"
        android:title="@string/btn_new_trip"
        app:showAsAction="always|withText" />

    <item android:title="@string/menu_group_trip">
        <menu>
            <item
                android:id="@+id/action_trip_history"
                android:title="@string/menu_trip_history" />
            <item
                android:id="@+id/action_export_gpx"
                android:title="@string/menu_export_gpx" />
            <item
                android:id="@+id/action_export_bundle"
                android:title="@string/menu_export_bundle" />
            <item
                android:id="@+id/action_import_gpx"
                android:title="@string/menu_import_gpx" />
        </menu>
    </item>

    <item android:title="@string/menu_group_tools">
        <menu>
            <item
                android:id="@+id/action_auto_waypoint"
                android:title="@string/menu_auto_waypoint" />
            <item
                android:id="@+id/action_offline_map"
                android:title="@string/menu_offline_map" />
            <item
                android:id="@+id/action_elevation_profile"
                android:title="@string/menu_elevation_profile" />
        </menu>
    </item>

    <item android:title="@string/menu_group_info">
        <menu>
            <item
                android:id="@+id/action_current_position"
                android:title="@string/menu_current_position" />
            <item
                android:id="@+id/action_sun_info"
                android:title="@string/menu_sun_info" />
            <item
                android:id="@+id/action_changelog"
                android:title="@string/menu_changelog" />
        </menu>
    </item>
</menu>
